hard-gists/2475758/run.log
=== Docker Run Log for 2475758 ===
Started at: Mi 29. Okt 13:05:28 CET 2025

[2025-10-29 13:05:28] START: Running container for 2475758
[2025-10-29 13:05:29] SUCCESS: Container 5cd23184a33e039e12f03068f62a14e3c2e5bd2bf0e53ad8f7f694a297180a21 started for 2475758
=== Container logs for 2475758 ===
  File "/snippet.py", line 33
    print "%r:\t%r" % (chr(i),
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2475758 ===
[2025-10-29 13:05:31] INFO: Container 5cd23184a33e039e12f03068f62a14e3c2e5bd2bf0e53ad8f7f694a297180a21 has stopped
